--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,8 @@
     android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center_horizontal"
+    android:orientation="vertical"
     android:padding="16dp"
     tools:context=".MainActivity"
     tools:ignore="ExtraText">
@@ -15,17 +15,17 @@
         android:id="@+id/moveCounter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:text="Moves: 0"
-        android:textSize="20sp"
-        android:layout_marginBottom="8dp" />
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/timerText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:text="Time: 0s"
-        android:textSize="20sp"
-        android:layout_marginBottom="16dp" />
+        android:textSize="20sp" />
 
     <androidx.gridlayout.widget.GridLayout
         android:id="@+id/gridLayout"
@@ -37,16 +37,17 @@
         app:columnCount="4"
         app:rowCount="4"
         app:useDefaultMargins="true" />
+
     <Button
         android:id="@+id/restartButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Game"
-        android:textSize="18sp"
         android:layout_marginTop="16dp"
         android:drawableStart="@android:drawable/ic_menu_rotate"
-    android:paddingStart="12dp"
-    android:paddingEnd="12dp" />
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
+        android:text="New Game"
+        android:textSize="18sp" />
 
 
 </LinearLayout>
